force-app/main/default/objects/TestMasterDetail__c/TestMasterDetail__c.object-meta.xml
<CustomObject>
    <label>TestMasterDetail</label>
    <nameField>
        <label>TestMasterDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestMasterDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>