force-app/main/default/objects/TestMasterDetail__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>Applicant</label>
    <referenceTo>SFDC_Applicant__c</referenceTo>
    <relationshipLabel>TestMasterDetails</relationshipLabel>
    <relationshipName>TestMasterDetails</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>